# flurry

./: .gitignore  Cargo.toml  README.md  config.toml  deny.toml  flake.nix  protocol.md  test.html  test.js
.github/workflows/: build_nix.yml  rust.yml  update-flake.yml  update.yml
assets/: 404.html  index.html  stats.js  style.css
src/: binary_protocol.rs  blame.rs  color.rs  config.rs  flutclient.rs  grid.rs  lib.rs  main.rs  protocols.rs  state_binary_protocol.rs  stream.rs  text_protocol.rs  utils.rs  webapi.rs
src/protocols/: binary_protocol.rs  palette_protocol.rs  stateful.rs  text_protocol.rs
