[package]
name = "flurry"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
atoi_radix10 = { version = "0.0.1", optional = true }
axum = { version = "0.7.7", features = ["ws"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
axum-streams = "0.19.0"
bytes = "1.6.0"
chrono = "0.4.38"
futures = "0.3.31"
headers = "0.4.0"
image = "0.25.2"
rand = "*"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.38", features = ["full"] }
tokio-stream = "0.1.16"
tokio-test = "*"
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
default = ["text", "binary"]
# contains all the parsers
all = ["text", "binary"]
text = ["dep:atoi_radix10"]
binary = []

[dev-dependencies]
tempfile = "*"
test-case = "*"
criterion = "*"
rand = "*"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
