[package]
name = "flurry"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
async-trait = "*"
atoi_radix10 = { version = "*", optional = true }
axum = { version = "*", features = ["ws"] }
axum-embed = "*"
axum-extra = { version = "*", features = ["typed-header"] }
axum-streams = "*"
bytes = "*"
chrono = "*"
futures = "*"
headers = "*"
image = "*"
rand = "*"
reqwest = { version = "0.12.9", optional = true }
rust-embed = "*"
serde = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["full"] }
tokio-stream = "*"
tokio-test = "*"
tower-http = { version = "*", features = ["fs", "trace"] }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }

[features]
default = ["text", "binary"]
# contains all the parsers
all = ["text", "binary"]
# utilities
auth = ["dep:reqwest"]
# protocols
text = ["dep:atoi_radix10"]
binary = []

[dev-dependencies]
tempfile = "*"
test-case = "*"
criterion = "*"
rand = "*"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
